[package]
name = "linux-embedded-svc"
version = "0.1.0"
edition = "2021"

[features]
default = ["mqtt", "storage"]
mqtt = ["rumqttc"]
storage = ["rusqlite"]

[dependencies]
embedded-svc = "0.21"
rumqttc = { version = "0.12", optional = true }
rusqlite = { version = "0.27", optional = true }
tokio = "1"

[patch.crates-io]
rumqttc = { git = "https://github.com/kelnos/rumqtt.git", branch = "public-connection-iter" }
