[package]
name = "linux-embedded-svc"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["mqtt", "storage"]
mqtt = ["rumqttc"]
serde = ["dep:serde", "serde_json"]
storage = ["rusqlite"]

[dependencies]
embedded-svc = "0.26"
rumqttc = { version = "0.23", optional = true }
rusqlite = { version = "0.29", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
